# jettyd-firmware

./: CMakeLists.txt  CONTRIBUTING.md  FIRMWARE_SPEC.md  LICENSE  Makefile  README.md  TODO.md  package.json
.github/workflows/: build.yml
core/: CMakeLists.txt
core/include/: jettyd.h  jettyd_mqtt.h  jettyd_nvs.h  jettyd_ota.h  jettyd_vm.h
core/src/: driver_registry.c  jettyd.c  mqtt.c  provision.c  shadow.c  telemetry.c  vm.c  wifi.c
devices/env-monitor-v1/: device.yaml  main.c
devices/relay-controller-v1/: device.yaml  main.c
devices/soil-moisture-v1/: device.yaml  main.c
drivers/bme280/: CMakeLists.txt  bme280.c  driver.yaml
drivers/button/: CMakeLists.txt  button.c  driver.yaml
drivers/dht22/: CMakeLists.txt  dht22.c  driver.yaml
drivers/ds18b20/: CMakeLists.txt  driver.yaml  ds18b20.c
drivers/hcsr04/: CMakeLists.txt  driver.yaml  hcsr04.c
drivers/ina219/: CMakeLists.txt  driver.yaml  ina219.c
drivers/led/: CMakeLists.txt  driver.yaml  led.c
drivers/pwm_output/: CMakeLists.txt  driver.yaml  pwm_output.c
drivers/relay/: CMakeLists.txt  driver.yaml  relay.c
drivers/soil_moisture/: CMakeLists.txt  driver.yaml  soil_moisture.c
jettyd/: CMakeLists.txt  Kconfig.projbuild
jettyd/include/: jettyd.h  jettyd_driver.h  jettyd_mqtt.h  jettyd_provision.h  jettyd_shadow.h  jettyd_telemetry.h  jettyd_vm.h  jettyd_wifi.h
jettyd/src/: driver_registry.c  jettyd.c  mqtt.c  nvs.c  ota.c  provision.c  shadow.c  telemetry.c  vm.c  wifi.c
test/: Makefile  test_button.c  test_drivers.c  test_telemetry.c  test_vm.c
tools/: build.py  safety-review.js
(+13 files in other folders)
